# arithop

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
test/: test_operations.py
