[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arithop"
version = "1.0.0"
description = "A simple Python package to perform arithmetic operations on multiple numbers."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Bineesh Shaji", email = "you@example.com" }
]
license = { text = "MIT" }
keywords = ["arithmetic", "math", "numbers", "calculator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
arithop = "arithop.__main__:main"
